Successfully implemented all required tasks as per the specifications